[project]
name = "abcmccpc2026spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ac-library-python",
    "numpy>=2.4.3",
    "sortedcontainers>=2.4.0",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
